--- a/utils/ResourcesProguard/说明.md
+++ b/utils/ResourcesProguard/说明.md
@@ -1,28 +1,30 @@
-×ÊÔ´ÎÄ¼ş»ìÏı¹¤¾ß£¬Ö÷ÒªÓÃÓÚ×ÊÔ´ÎÄ¼şµÄ»ìÏı 
+èµ„æºæ–‡ä»¶æ··æ·†å·¥å…·ï¼Œä¸»è¦ç”¨äºèµ„æºæ–‡ä»¶çš„æ··æ·† 
 
-Ê¹ÓÃ·½·¨
+ä½¿ç”¨æ–¹æ³•
 
- 1 ½«apk·ÅÈëÎÄ¼ş¼Ğ£¬
+####  1 å°†apkæ”¾å…¥æ–‡ä»¶å¤¹ï¼Œ ####
 
-  2 ĞŞ¸Ä Åú´¦ÀíÎÄ¼ş  buildApk.bat
-
-
-java -jar resourcesproguard.jar eloan.apk -config config.xml -out outapk -signature  xiangbalao.keystore longtaogemima longtaogemima xiangbalao
-
---------------------------------APK Ãû------- -config  ÅäÖÃÎÄ¼ş -out  Êä³öÄ¿Â¼¡ª¡ª¡ª¡ª¡ª¡ª¡ª¡ª    -signature  Ç©ÃûÂ·¾¶¼°ÎÄ¼şÃû -ÃÜÂë -ÃÜÂë- ±ğÃû 
+####  2 ä¿®æ”¹ æ‰¹å¤„ç†æ–‡ä»¶  buildApk.bat ####
 
 
- 3 Ë«»÷  buildApk.bat
+    java -jar resourcesproguard.jar eloan.apk -config config.xml -out outapk -signature  xiangbalao.keystore longtaogemima longtaogemima xiangbalao
+
+    -----------APK å------- -config  é…ç½®æ–‡ä»¶ -out  è¾“å‡ºç›®å½•---   -signature  ç­¾åè·¯å¾„åŠæ–‡ä»¶å -å¯†ç  -å¯†ç - åˆ«å 
+
+
+####  3 åŒå‡»  buildApk.bat ####
  
-  4   Êä³öÄ¿Â¼ ÖĞ Ó¦ÓÃÃû_signed.apk  ÎªÒÑÇ©Ãû  Ó¦ÓÃÃû_unsigned.apk ÎªÎ´Ç©ÃûÓ¦ÓÃ 
+#### 4  å¤„ç†ç»“æœ ####
+
+è¾“å‡ºç›®å½• ä¸­ åº”ç”¨å_signed.apk  ä¸ºå·²ç­¾å  åº”ç”¨å_unsigned.apk ä¸ºæœªç­¾ååº”ç”¨ 
 
 
 
 
 
-config.xml  ÎªÅäÖÃÎÄ¼ş£¬  
+config.xml  ä¸ºé…ç½®æ–‡ä»¶ï¼Œ  
 
-buildApk.bat ÖĞµÄÇ©ÃûĞÅÏ¢½«¸²¸Ç config.xml ÖĞµÄÅäÖÃÏî
+buildApk.bat ä¸­çš„ç­¾åä¿¡æ¯å°†è¦†ç›– config.xml ä¸­çš„é…ç½®é¡¹
 
                         
 
@@ -31,9 +33,9 @@ buildApk.bat ÖĞµÄÇ©ÃûĞÅÏ¢½«¸²¸Ç config.xml ÖĞµÄÅäÖÃÏî
 
 						
 						
-%JAVA_HOME%\bin;
-%ANDROID_HOME%\tools;
-%ANDROID_HOME%\platform-tools;
-D:\Program\apache-ant-1.9.4\bin;
-E:\Android_IDE\sdk\build-tools\23.0.0;
+    %JAVA_HOME%\bin;
+    %ANDROID_HOME%\tools;
+    %ANDROID_HOME%\platform-tools;
+    D:\Program\apache-ant-1.9.4\bin;
+    E:\Android_IDE\sdk\build-tools\23.0.0;
 
